fixed bug on mobile viewports

--- a/credit-tree/src/app/get-started/login/page.module.css
+++ b/credit-tree/src/app/get-started/login/page.module.css
@@ -56,14 +56,14 @@ body {
   cursor: pointer;
 }
 
-@media only screen and (max-width: 520px) {
+@media only screen and (max-width: 720px) {
   .field {
     width: 400px;
   }
 }
 
-@media only screen and (max-width: 720px) {
+@media only screen and (max-width: 520px) {
   .field {
-    width: 400px;
+    width: 300px;
   }
 }
